[project]
name = "hard-link-files"
version = "0.0.1"
description = "Add your description here"
requires-python = "==3.13.*"
dependencies = [
    "cx-freeze>=8.4.1",
    "icecream>=2.1.8",
    "typer>=0.20.0",
]

[[tool.cxfreeze.executables]]
script = "main.py"
base = "console"
copyright = "Copyright (C) 2025 yukiyosanako"
target_name = "hlf"

[tool.cxfreeze.build_exe]
zip_include_packages = ["icecream", "pyperclip", "requests", "typer"]
optimize = 2
